<resources>
    <string name="app_name">Журнал посещений</string>
    <string name="username_label">username</string>
    <string name="password_label">Пароль</string>
    <string name="title_activity_login">Войти</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">user_name</string>
    <string name="prompt_FIO">ФИО</string>
    <string name="prompt_Group">Группа</string>
    <string name="prompt_university">Университет</string>
    <string name="prompt_group">Группа</string>
    <string name="prompt_teacher">Преподаватель</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Welcome, "</string>
    <string name="invalid_username">Некорректное имя пользователя!</string>
    <string name="invalid_password">Пароль должен быть >5 символов</string>
    <string name="login_failed">Вход не удался</string>
    <string name="action_register">Регистрация</string>
    <string name="prompt_SubjectName">Название предмета</string>
    <string name="addSubjectLabel">Новый предмет</string>
    <string name="action_add">Сохранить</string>
    <string name="addStudentLabel">Студент</string>
    <string name="prompt_StudentName">ФИО</string>
    <string name="prompt_groupNums">Группы</string>
    <string name="ok_label">Ok</string>
    <string name="dismiss_label">Пропустить</string>
    <string name="clear_all_label">Очистить</string>
</resources>
